增加修改功能，开启唯一校验
